# slobs-cli

./: .gitignore  CHANGELOG.md  README.md  Taskfile.yaml  pyproject.toml  ruff.toml  tox.ini
.github/.workflows/: release.yml
.github/workflows/: publish.yml
completions/: _slobs-cli.bash  _slobs-cli.fish  _slobs-cli.zsh
src/slobs_cli/: __about__.py  __init__.py  audio.py  cli.py  record.py  replaybuffer.py  scene.py  stream.py  studiomode.py
tests/: teardown.py
