[project]
name = "slobs-cli"
description = "A command line application for Streamlabs Desktop"
authors = [{ name = "onyx-and-iris", email = "code@onyxandiris.online" }]
dependencies = ["pyslobs>=2.0.4", "asyncclick>=8.1.8"]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
dynamic = ["version"]

[project.scripts]
slobs-cli = "slobs_cli.cli:run"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.version]
source = "file"
path = "src/slobs_cli/__about__.py"

[tool.pdm.scripts]
cli.cmd = "slobs-cli {args}"
cli.env_file = ".env"

pre_test.cmd = "python tests/setup.py"
test.cmd = "pytest {args}"
test.env_file = ".env"
post_test.cmd = "python tests/teardown.py"

[dependency-groups]
dev = [
    "tox-pdm>=0.7.2",
    "pytest>=8.4.0",
    "virtualenv-pyenv>=0.5.0",
    "pytest-randomly>=3.16.0",
]
