[project]
name = "slobs-cli"
description = "A command line application for Streamlabs Desktop"
authors = [{ name = "onyx-and-iris", email = "code@onyxandiris.online" }]
dependencies = ["pyslobs>=2.0.5", "asyncclick>=8.1.8", "rich>=14.0.0"]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
dynamic = ["version"]

[project.scripts]
slobs-cli = "slobs_cli.cli:run"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.version]
source = "file"
path = "src/slobs_cli/__about__.py"

[tool.pdm.scripts]
_.env_file = ".env"

cli.cmd = "slobs-cli {args}"

_setup.cmd = "python tests/setup.py"
_teardown.cmd = "python tests/teardown.py"
test.composite = ["_setup", "pytest {args}", "_teardown"]
test.keep_going = true

fmt.cmd = "ruff format {args}"
post_fmt.cmd = "ruff check {args}"

[dependency-groups]
dev = [
    "tox-pdm>=0.7.2",
    "pytest>=8.4.0",
    "pytest-randomly>=3.16.0",
    "virtualenv-pyenv>=0.5.0",
    "ruff>=0.11.13",
]
